fix: redoc search bar vertical alignment and focus UI improvement

--- a/css/tailwind.css
+++ b/css/tailwind.css
@@ -1262,6 +1262,15 @@ h5,
 h6 {
   color: #fff !important;
 }
+/* center align redoc search icon and label */
+.redoc-wrap [role='search'] {
+  display: flex;
+  align-items: center;
+}
+.redoc-wrap [role='search'] input:focus {
+  border: none;
+  box-shadow: none;
+}
 table th {
   background-color: var(--ifm-table-head-background);
   color: var(--ifm-table-head-color);
